[gd_scene load_steps=11 format=2]

[ext_resource path="res://characters/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level_default.gd" type="Script" id=2]
[ext_resource path="res://transformable_Objects/object.tscn" type="PackedScene" id=3]
[ext_resource path="res://functional_objects/SpawnPoint.tscn" type="PackedScene" id=4]
[ext_resource path="res://functional_objects/EndPoint.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 14.5, 1, 22.9 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.682353, 0.243137, 0.243137, 1 )

[sub_resource type="CubeMesh" id=1]
material = SubResource( 3 )
size = Vector3( 30, 2, 30 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.941176, 0.941176, 0.941176, 1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 60, 1, 60 )

[node name="level_default" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0143375, -0.0479512, 0.000162125 )
script = ExtResource( 2 )

[node name="Floor" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00493431, 0, 0.0344582 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 3.36, 0, 0, 0, 1.05, 0, 0, 0, 1.05, 0, -1, 0 )
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
transform = Transform( 3.25, 0, 0, 0, 1, 0, 0, 0, 1.6, 0, -1, 0 )
mesh = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.59565, 0.803244, 0, -0.803244, 0.59565, 0, 25.228, 13.9565 )
light_energy = 0.3
shadow_enabled = true

[node name="Walls" type="Spatial" parent="."]

[node name="Wall" type="StaticBody" parent="Walls"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.00493431, 12.7687, -14.8949 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Wall"]
transform = Transform( 0.999657, 0, 0, 0, 0.999657, 0, 0, 0, 0.999657, 0, -1, 0 )
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Wall"]
transform = Transform( 1, 0, 0, 0, 1.66345, -2.90005e-08, 0, -2.90005e-08, 1, 0, -1.67691, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.996195, 0.0661848, -0.0567072, 0, 0.650642, 0.759385, 0.0871557, -0.756495, 0.648166, -3.2, 15.9612, 14.5 )

[node name="OutofBoundsFloor" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -19.4613, 0 )

[node name="CollisionShape" type="CollisionShape" parent="OutofBoundsFloor"]
shape = SubResource( 5 )

[node name="SpawnPoint" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.9296, 0.436448, -0.215141 )

[node name="EndPoint" parent="." instance=ExtResource( 5 )]
transform = Transform( 1.911, 0, 0, 0, 1.6875, 0, 0, 0, 1.3, 23.6143, 0.0479512, 2.39984 )

[node name="object_Transformable" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3143, 1.04795, 0.299838 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.100951, 0.79234, 0.0118334 )

[connection signal="camera_toggled" from="." to="Player" method="_on_level_test_camera_toggled"]
[connection signal="body_entered" from="OutofBoundsFloor" to="." method="_on_OutofBoundsFloor_body_entered"]
